--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<title>EscaTech CA</title>
 	<link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow" rel="stylesheet">
+
 </head>
 <body>
 	<header>
@@ -25,13 +29,23 @@
 		</nav>
 	</header>
 	<main>
-		<section>
-			<h2>Productos destacados</h2>
-			<ul>
-				<li><a href="#"><img src="producto1.jpg" alt="Producto 1"><br>Producto 1</a></li>
-				<li><a href="#"><img src="producto2.jpg" alt="Producto 2"><br>Producto 2</a></li>
-				<li><a href="#"><img src="producto3.jpg" alt="Producto 3"><br>Producto 3</a></li>
-			</ul>
+        <section style="background-color: #E0F2FB;">
+            <div class="QuienesSomos">
+                <img src="images/Gamer.jpg" alt="Gamer">
+                <h2>¿Quienes somos?</h2>
+                <p> Somos una empresa especializada en la venta de equipos y componentes de informática para gamers. Nuestro objetivo es proporcionar a nuestros clientes la mejor experiencia de juego posible, ofreciendo productos de alta calidad a precios competitivos. </p>
+                <p> En nuestra tienda, encontrarás una amplia variedad de productos para gamers, incluyendo equipos de escritorio, portátiles, monitores, teclados, ratones, auriculares y más. Además, ofrecemos servicios de reparación y configuración de equipos informáticos, para que puedas estar seguro de que tus dispositivos están en las mejores manos. </p>
+			</div>     
+        </section>
+		<section style="background-color: #113c52;">
+            <div class="Productosdestacados">
+                <h2>Productos destacados</h2>
+			    <ul>
+				    <li><a href="#"><img src="producto1.jpg" alt="Producto 1"><br>Producto 1</a></li>
+				    <li><a href="#"><img src="producto2.jpg" alt="Producto 2"><br>Producto 2</a></li>
+				    <li><a href="#"><img src="producto3.jpg" alt="Producto 3"><br>Producto 3</a></li>
+			    </ul>
+            </div>
 		</section>
 		<section>
 			<h2>Productos por categoría</h2>
