--- a/index.html
+++ b/index.html
@@ -37,13 +37,17 @@
                 <p> En nuestra tienda, encontrarás una amplia variedad de productos para gamers, incluyendo equipos de escritorio, portátiles, monitores, teclados, ratones, auriculares y más. Además, ofrecemos servicios de reparación y configuración de equipos informáticos, para que puedas estar seguro de que tus dispositivos están en las mejores manos. </p>
 			</div>     
         </section>
-		<section style="background-color: #113c52;">
+		<section style="background-color: rgb(1, 26, 110)">
             <div class="Productosdestacados">
                 <h2>Productos destacados</h2>
 			    <ul>
-				    <li><a href="#"><img src="producto1.jpg" alt="Producto 1"><br>Producto 1</a></li>
-				    <li><a href="#"><img src="producto2.jpg" alt="Producto 2"><br>Producto 2</a></li>
-				    <li><a href="#"><img src="producto3.jpg" alt="Producto 3"><br>Producto 3</a></li>
+					<li><button>←</button></li>
+				    <li><a href="#"><img src="images/Mouse2.png" alt="Producto 1"><br>Producto 1</a></li>
+				    <li><a href="#"><img src="images/Audifonos4.jpg" alt="Producto 2"><br>Producto 2</a></li>
+				    <li><a href="#"><img src="images/Ryzen5-2gen" alt="Producto 3"><br>Producto 3</a></li>
+					<li><a href="#"><img src="images/MemoriaRam1.jpg" alt="Producto 4"><br>Producto 4</a></li>
+					<li><a href="#"><img src="images/Audifonos1.jpg" alt="Producto 5"><br>Producto 3</a></li>
+					<li><button>→</button></li>
 			    </ul>
             </div>
 		</section>
