Se vienen cositas

--- a/index.html
+++ b/index.html
@@ -37,27 +37,42 @@
                 <p> En nuestra tienda, encontrarás una amplia variedad de productos para gamers, incluyendo equipos de escritorio, portátiles, monitores, teclados, ratones, auriculares y más. Además, ofrecemos servicios de reparación y configuración de equipos informáticos, para que puedas estar seguro de que tus dispositivos están en las mejores manos. </p>
 			</div>     
         </section>
-		<section style="background-color: rgb(1, 26, 110)">
+		<section style="background-image: linear-gradient(to bottom, rgb(1, 26, 110), rgb(2, 33, 137), rgb(1, 26, 110)) ;">
             <div class="Productosdestacados">
                 <h2>Productos destacados</h2>
 			    <ul>
-					<li><button>←</button></li>
-				    <li><a href="#"><img src="images/Mouse2.png" alt="Producto 1"><br>Producto 1</a></li>
-				    <li><a href="#"><img src="images/Audifonos4.jpg" alt="Producto 2"><br>Producto 2</a></li>
-				    <li><a href="#"><img src="images/Ryzen5-2gen" alt="Producto 3"><br>Producto 3</a></li>
-					<li><a href="#"><img src="images/MemoriaRam1.jpg" alt="Producto 4"><br>Producto 4</a></li>
-					<li><a href="#"><img src="images/Audifonos1.jpg" alt="Producto 5"><br>Producto 3</a></li>
-					<li><button>→</button></li>
+					<li onclick="window.location.href='#'"><button>←</button></li>
+				    <li onclick="window.location.href='#'">
+						<img src="images/Mouse2.png" alt="Producto 1">
+						<a>Mouse Redragon Cobra M711<br><b>Precio $25,00</b></a>
+					</li>
+				    <li onclick="window.location.href='#'">
+						<img src="images/Audifonos4.jpg" alt="Producto 2">
+						<a>HP H220S Audífonos Gamer<br><b>Precio $50,00</b></a>
+					</li>
+				    <li onclick="window.location.href='#'">
+						<img src="images/Ryzen5-2gen" alt="Producto 3">
+						<a>Procesador AMD Ryzen 5 2gen<br><b>Precio $150,00</b></a>
+					</li>
+					<li onclick="window.location.href='#'">
+						<img src="images/MemoriaRam1.jpg" alt="Producto 4">
+						<a>Memoria RAM DDR4 8GB<br><b>Precio $40,00</b></a>
+					</li>
+					<li onclick="window.location.href='#'">
+						<img src="images/Audifonos1.jpg" alt="Producto 5">
+						<a>Audifonos Gamer Logitech G332<br><b>Precio $85,00</b></a>
+					</li>
+					<li onclick="window.location.href='#'"><button>→</button></li>
 			    </ul>
             </div>
+			<a class="MostrarMas" href="#">Mostrar mas productos</a>
 		</section>
-		<section>
-			<h2>Productos por categoría</h2>
-			<ul>
-				<li><a href="#">Computadoras</a></li>
-				<li><a href="#">Teléfonos</a></li>
-				<li><a href="#">Periféricos</a></li>
-				<li><a href="#">Laptops</a></li>
+		<section style="background-color: bisque;">
+			<ul class="Categorias">
+				<li class="Computadoras"><a href="#">Computadoras</a></li>
+				<li class="Telefonos"><a href="#">Teléfonos</a></li>
+				<li class="Perifericos"><a href="#">Periféricos</a></li>
+				<li class="Laptops"><a href="#">Laptops</a></li>
 			</ul>
 		</section>
 		<section>
