--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p> En nuestra tienda, encontrarás una amplia variedad de productos para gamers, incluyendo equipos de escritorio, portátiles, monitores, teclados, ratones, auriculares y más. Además, ofrecemos servicios de reparación y configuración de equipos informáticos, para que puedas estar seguro de que tus dispositivos están en las mejores manos. </p>
 			</div>     
         </section>
-		<section style="background-image: linear-gradient(to bottom, rgb(1, 26, 110), rgb(2, 33, 137), rgb(1, 26, 110)) ;">
+		<section style="background-image: linear-gradient(to bottom, rgb(1, 26, 110), rgb(7, 50, 189), rgb(1, 26, 110)) ;">
             <div class="Productosdestacados">
                 <h2>Productos destacados</h2>
 			    <ul>
@@ -69,10 +69,10 @@
 		</section>
 		<section style="background-color: bisque;">
 			<ul class="Categorias">
-				<li class="Computadoras"><a href="#">Computadoras</a></li>
-				<li class="Telefonos"><a href="#">Teléfonos</a></li>
-				<li class="Perifericos"><a href="#">Periféricos</a></li>
-				<li class="Laptops"><a href="#">Laptops</a></li>
+				<li onclick="window.location.href='#'" class="Computadoras"><a href="#">Computadoras</a></li>
+				<li onclick="window.location.href='#'" class="Telefonos"><a href="#">Teléfonos</a></li>
+				<li onclick="window.location.href='#'" class="Perifericos"><a href="#">Periféricos</a></li>
+				<li onclick="window.location.href='#'" class="Laptops"><a href="#">Laptops</a></li>
 			</ul>
 		</section>
 		<section>
