--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 					<input type="text" placeholder="Buscar" style="text-indent: 10px;">
 				</li>
 				<li> <a href="index.html">Inicio</a> </li>
-				<li> <a href="#">Productos</a> </li>
+				<li> <a href="productos.html">Productos</a> </li>
 				<li> <a href="#">Contacto</a> </li>
 				<li> <button>Acceder</button> </li>
 				<li> <button>Registrar</button> </li>
 			</ul>
 		</nav>
 	</header>
-	<main>
-        <section style="background-color: #E0F2FB;">
+	<main >
+        <section style="background-image: linear-gradient(to bottom, #abe2fd, #E0F2FB, #abe2fd)">
             <div class="QuienesSomos">
                 <img src="images/Gamer.jpg" alt="Gamer">
                 <h2>¿Quiénes somos?</h2>
@@ -37,7 +37,7 @@
                 <p> En nuestra tienda, encontrarás una amplia variedad de productos para gamers, incluyendo equipos de escritorio, portátiles, monitores, teclados, ratones, auriculares y más. Además, ofrecemos servicios de reparación y configuración de equipos informáticos, para que puedas estar seguro de que tus dispositivos están en las mejores manos. </p>
 			</div>     
         </section>
-		<section style="background-image: linear-gradient(to bottom, rgb(1, 26, 110), rgb(7, 50, 189), rgb(1, 26, 110)) ;">
+		<section style="background-image: linear-gradient(to bottom, rgb(1, 26, 110), rgb(7, 50, 189), rgb(1, 26, 110));">
             <div class="Productosdestacados">
                 <h2>Productos destacados</h2>
 			    <ul>
@@ -113,7 +113,6 @@
 					</form>
 				</div>	
 		</section>
-		
 		<button class="BotonFlotante">
 			<a> <ion-icon name="cart-outline"></ion-icon> </a>
 		</button>
