--- a/productos.html
+++ b/productos.html
@@ -46,9 +46,9 @@
 			<ul>
 				<li> <h2>Categorías</h2> </li>
 	
-				<li> <a href="index.html">Computadoras</a> </li>
+				<li> <a href="#">Computadoras</a> </li>
 	
-				<li> <a href="productos.html">Teléfonos</a> </li>
+				<li> <a href="#">Teléfonos</a> </li>
 	
 				<li> <a href="#">Periféricos</a> </li>
 	
