--- a/registrar.html
+++ b/registrar.html
@@ -41,44 +41,73 @@
         </header>
 
         <main>
+
             <video src="/images/Azulfondo.mp4" autoplay="true" muted="true" loop="true"></video>
+
             <section>
+
                 <div class="centro2">
+
                     <div>
+
                         <form action="" method="POST">
                             <h2>Registrar</h2>
+
                             <div class="cajastexto">
+
                                 <ion-icon name="text-outline"></ion-icon>
                                 <input type="text" name="Nombre" required>
                                 <label for="">Nombre</label>
+
                             </div>
+
                             <div class="cajastexto">
+
                                 <ion-icon name="id-card-outline"></ion-icon>
                                 <input type="text" name="Ci" required>
                                 <label for="">Cedula</label>
+
                             </div>
+                            
                             <div class="cajastexto">
+
                                 <ion-icon name="mail-outline"></ion-icon>
                                 <input type="email" name="Correo" required>
                                 <label for="">Correo</label>
+
                             </div>
+                            
                             <div class="cajastexto">
+
                                 <ion-icon name="person-outline"></ion-icon>
                                 <input type="text" name="Usuario" required>
                                 <label for="">Usuario</label>
+
                             </div>
+
                             <div class="cajastexto">
+
                                 <ion-icon name="lock-closed-outline"></ion-icon>
                                 <input type="password" name="Contraseña" required>
                                 <label for="">Contraseña</label>
+
                             </div>
+
                             <button type="submit">Registrar</button>
                         </form>
+
                     </div>
+
                 </div>
+
             </section>
+
         </main>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+        <footer>
+			<p>Derechos reservados &copy; 2023 Tienda de tecnología</p>
+		</footer>
+
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </body>
