--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 							<td class="TextoContacto">
 
 								<h2 style="margin-top: 0;">Contacto para servicios de reparación y configuración de equipos</h2>
-								<a> En nuestra empresa, ofrecemos servicios de reparación y configuración de equipos informáticos para particulares y empresas. Si tu equipo presenta algún problema o no funciona correctamente, nuestro equipo de expertos en reparación de equipos informáticos estará a tu disposición para solucionar cualquier avería. <br><br> </a>
-								<a> Además, si necesitas configurar tu equipo para un uso específico, como por ejemplo para trabajar desde casa, nuestro equipo de expertos en configuración de equipos podrá ayudarte a optimizar tu equipo para que puedas trabajar con la máxima eficiencia. <br><br> </a>
-								<a> No importa si se trata de un problema de hardware o software, o si necesitas ayuda para configurar tu equipo para un uso específico, nuestro equipo de técnicos altamente capacitados está aquí para ayudarte. ¡No dudes en contactarnos para obtener más información sobre nuestros servicios de reparación y configuración de equipos!<br><br></a>
+								<p> En nuestra empresa, ofrecemos servicios de reparación y configuración de equipos informáticos para particulares y empresas. Si tu equipo presenta algún problema o no funciona correctamente, nuestro equipo de expertos en reparación de equipos informáticos estará a tu disposición para solucionar cualquier avería. <br> </p>
+								<p> Además, si necesitas configurar tu equipo para un uso específico, como por ejemplo para trabajar desde casa, nuestro equipo de expertos en configuración de equipos podrá ayudarte a optimizar tu equipo para que puedas trabajar con la máxima eficiencia. <br><br> </p>
+								<p> No importa si se trata de un problema de hardware o software, o si necesitas ayuda para configurar tu equipo para un uso específico, nuestro equipo de técnicos altamente capacitados está aquí para ayudarte. ¡No dudes en contactarnos para obtener más información sobre nuestros servicios de reparación y configuración de equipos!<br></p>
 
 							</td>
 	
